# Lazy-todo

./: .gitignore  README.md  todo_list.json
todo_cli/: .gitignore  Cargo.toml  manu.md  todo_list.json  todos.json
todo_cli/src/: add_task.rs  delete_task.rs  handle_input.rs  input.rs  main.rs  search.rs  sort.rs  todo.rs  ui.rs
