[package]
name = "ltd"
version = "0.1.0"
authors = ["riku-yanagihashi"]
edition = "2021"

[dependencies]
crossterm = "0.25"
dialoguer = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tui = "0.19"

[[bin]]
name = "ltd"
path = "src/main.rs"

[package.metadata.cargo-install]
bin = ["ltd"]
