[package]
name = "ltd"
version = "0.1.0"
authors = ["riku-yanagihashi"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = { version = "0.16", features = ["crossterm"] }
crossterm = "0.22"
chrono = "0.4"
simplelog = "0.11"
strsim = "0.10.0"

[[bin]]
name = "ltd"
path = "src/main.rs"

[package.metadata.cargo-install]
bin = ["ltd"]
